@@ -8,13 +8,14 @@
 class Texture;
 class EntityZone;
 class Text;
+class Map;
 
 class Entity : 
 	public Renderable
 {
 public:
 
-	Entity(int x, int y, int weight, Graphics* graphics, Texture* texture, int const* FRAME_COUNT, int const* FRAME_WIDTH, int const* FRAME_HEIGHT, World* world, int id);
+	Entity(int x, int y, int weight, Graphics* graphics, Texture* texture, int const* FRAME_COUNT, int const* FRAME_WIDTH, int const* FRAME_HEIGHT, int const* FRAME_CENTER_OFFSET, World* world, int id);
 	~Entity();
 	virtual void render();
 	virtual void calcFrame(int framerate);
@@ -26,7 +27,10 @@ public:
 	int getId();
 
 	Text* getDebugText();
-	void updateForces();
+	void updateForces(int framerate);
+	void handleCollisions(int framerate, Map* map);
+
+	const int MAX_ACCELARATION_Y = 5;
 
 protected:
 
@@ -37,12 +41,14 @@ protected:
 	int const* FRAME_COUNT;
 	int const* FRAME_WIDTH;
 	int const* FRAME_HEIGHT;
+	int const* FRAME_CENTER_OFFSET;
 	EntityZone* currentEntityZone;
 	std::string entityName;
 	int id;
 	EntityStruct::entityForces forces;
 	bool entityChanged;
 
+	void updateDebugTextPosition();
 	void updateDebugText();
 	
 
