@@ -1,7 +1,7 @@
 //This namespace handles structs of entities
 namespace EntityStruct
 {
-	typedef struct entityForces
+	struct entityForces
 	{
 		double x;
 		double y;
