@@ -108,3 +108,4 @@ void Text::setTextPos(int x, int y)
 	this->x = x;
 	this->y = y;
 }
+
